# spherelearnxtractors

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts
input/: README.md
output/: JAMB-Mathematics-Past-Questions-EduNgr-Sample_structured.json  README.md
scripts/: __init__.py  chunker.py  extractor_pdf.py  extractor_txt.py  models.py  pipeline.py
src/: App.tsx  index.css
src/server/: parser.ts
