[project]
name = "spherelearnxtractors"
version = "0.1.0"
description = "Offline textbook extraction and chunking pipeline in Python."
authors = ["SphereLearnXtractors Team <team@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
all = [
    "pypdf>=3.0.0",
    "pdfplumber>=0.10.0",
]

[project.scripts]
extract-textbook = "scripts.pipeline:run_pipeline_cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
